<resources>
    <string name="about" translatable="true">About</string>
    <string name="accountSaved" translatable="true">Your data saved</string>
    <string name="accountSavedFaild" translatable="true">Your data failed save</string>
    <string name="accountSignInFaild" translatable="true">Account Sign In Faild</string>
    <string name="accountSignin" translatable="true">Account Sign In</string>
    <string name="account_created" translatable="true">Account Created</string>
    <string name="account_creation_faild" translatable="true">Account Created Failed</string>
    <string name="addPhoto_or_text" translatable="true">Please add photo or text to post</string>
    <string name="add_new_date" translatable="true">Add new date</string>
    <string name="add_new_driver" translatable="true">Add New Driver</string>
    <string name="add_post" translatable="true">Add post</string>
    <string name="add_ticket_price" translatable="true">Example: 12 ILS</string>
    <string name="add_to_blacklist" translatable="true">Add to blacklist</string>
    <string name="add_your_post" translatable="true">Add your post</string>
    <string name="alreadyHaveAccount" translatable="true">Already have an account?</string>
    <string name="arrival_time" translatable="true">Arrival Time</string>
    <string name="available" translatable="true">Available</string>
    <string name="available_seats" translatable="true">Available Seats</string>
    <string name="booking_seat" translatable="true">Booking Seat</string>
    <string name="booking_ticket" translatable="true">Booking Ticket</string>
    <string name="booking_ticket_info" translatable="true">Book one ticket for each passenger for any bus</string>
    <string name="bus_company">Bus company</string>
    <string-array name="bus_line_names">
        <item>AAUJ-Tulkarm</item>
        <item>AAUJ-Jenin</item>
        <item>AAUJ-Ya`bad</item>
        <item>AAUJ-Tubas</item>
        <item>AAUJ-Selfet</item>
        <item>AAUJ-Arrabeh</item>
        <item>AAUJ-Borqen</item>
        <item>AAUJ-Zababdeh</item>
    </string-array>
    <string-array name="bus_city_destination">
        <item>Tulkarm</item>
        <item>Jenin</item>
        <item>Ya`bad</item>
        <item>Tubas</item>
        <item>Selfet</item>
        <item>Arrabeh</item>
        <item>Borqen</item>
        <item>Zababdeh</item>
    </string-array>
    <string name="bus_locations" translatable="true">Bus Locations</string>
    <string name="bus_number" translatable="true">Bus Number</string>
    <string name="bus_schedule" translatable="true">Bus Schedule</string>
    <string-array name="bus_seat_numbers">
        <item>4</item>
        <item>7</item>
        <item>20</item>
        <item>50</item>
        <item>55</item>
    </string-array>
    <string name="calling" translatable="true">Call now</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="change_time" translatable="true">Change time</string>
    <string name="check_bookings" translatable="true">Check bookings</string>
    <string name="choose_new_time" translatable="true">Choose new time:</string>
    <string name="city" translatable="true">City</string>
    <string name="city_name" translatable="true">City Name</string>
    <string name="click_here_to_edit_image" translatable="true">Click here to edit image</string>
    <string name="company" translatable="true">Company</string>
    <string name="company_buses" translatable="true">Company buses</string>
    <string name="company_city" translatable="true">Company city</string>
    <string name="company_drivers" translatable="true">Company drivers</string>
    <string name="company_email" translatable="true">Company Email</string>
    <string name="company_name" translatable="true">Company Name</string>
    <string name="company_phone" translatable="true">Company Phone</string>
    <string name="connectDevaloper" translatable="true">Connect With Us</string>
    <string name="create" translatable="true">Create</string>
    <string name="current_location" translatable="true">Current location</string>
    <string name="delete" translatable="true">Delete</string>
    <string name="devalopers" translatable="true">Devalopers</string>
    <string name="devalopers_info" translatable="true">This system is a graduation project at the IT Faculty of the Arab American University in Palestine, from the Ali Qadomy and Ala` Abu Shomer</string>
    <string name="driver_email" translatable="true">Driver email</string>
    <string name="driver_homescreen" translatable="true">Bus Driver</string>
    <string name="driver_id" translatable="true">Enter Driver ID</string>
    <string name="driver_name" translatable="true">Driver name</string>
    <string name="driver_password" translatable="true">Enter Driver Password</string>
    <string name="driver_phone" translatable="true">Driver Phone</string>
    <string name="drivers_information_s" translatable="true">Drivers Information\'s</string>
    <string name="edit_bus_line" translatable="true">Edit bus line</string>
    <string name="edit_bus_schedule" translatable="true">Edit Bus schedule</string>
    <string name="email" translatable="true">Email</string>
    <string name="enterEmail" translatable="true">Email</string>
    <string name="enterMobileNumber" translatable="true">Enter Your Mobile Number</string>
    <string name="enterName" translatable="true">Enter Your Name</string>
    <string name="enterPassword" translatable="true">Enter Your Password</string>
    <string name="enterYourEmail" translatable="true">Enter your registered email</string>
    <string name="enter_you_new_mobile_number" translatable="true">Enter you new mobile number</string>
    <string name="enter_your_city" translatable="true">Enter your city</string>
    <string name="enter_your_new_email" translatable="true">Enter your new email</string>
    <string name="enter_your_new_name" translatable="true">Enter your new name</string>
    <string name="enter_your_new_password" translatable="true">Enter your new password</string>
    <string name="enter_your_phone_number" translatable="true">Enter your phone number</string>
    <string name="errorMessage" translatable="true">Error</string>
    <string name="error_message" translatable="true">Data can\'t be loaded</string>
    <string name="exit" translatable="true">Exit</string>
    <string name="faildSendEmailReset" translatable="true">Failed to send reset email!</string>
    <string name="fieldsMessageError" translatable="true">Please fill out all fields</string>
    <string name="forget_your_password" translatable="true">Forget your password ?</string>
    <string name="gate_number" translatable="true">Gate number</string>
    <string name="help" translatable="true">Help</string>
    <string name="homeTown" translatable="true">Home Town</string>
    <string name="ils" translatable="true">ILS</string>
    <string name="imageUploadSuccessfully" translatable="true">The Image Uploaded Successfully</string>
    <string name="in_cash" translatable="true">In Cash</string>
    <string name="infobussystem" translatable="true">UNI-SmartBus, system designed for university students in particular, the system can be used by bus companies, bus drivers and students. The application allow to check the bus station in university stations, and check the available seats in the bus.The system allows passengers to check the buses schedule, booking tickets, and tracking the bus during the trip.</string>
    <string name="latitude" translatable="true">Latitude</string>
    <string name="leaving_time" translatable="true">Leaving Time</string>
    <string name="line_name" translatable="true">Line Name</string>
    <string name="login" translatable="true">Log In</string>
    <string name="logout" translatable="true">Log Out</string>
    <string name="longitude" translatable="true">Longitude</string>
    <string name="malformed_email" translatable="true">Confirm your email</string>
    <string name="messgesWillbeHere" translatable="true">Messages will be here</string>
    <string name="minute" translatable="true">Minute</string>
    <string name="mobile" translatable="true">Mobile No</string>
    <string name="mobile_number" translatable="true">Mobile Number</string>
    <string name="my_ticket" translatable="true">My ticket</string>
    <string name="name" translatable="true">Name</string>
    <string name="need_regester" translatable="true">We just need your registered Email Id to sent you password reset instructions</string>
    <string name="not_registered_yet" translatable="true">Not registered yet ?</string>
    <string name="offers" translatable="true">Offers</string>
    <string name="offers_info" translatable="true">Check exciting offers for each bus</string>
    <string name="passenger_controlling" translatable="true">Passenger Controlling</string>
    <string name="passenger_name" translatable="true">Passenger Name</string>
    <string name="passengers_numbers" translatable="true">Passengers numbers</string>
    <string name="password" translatable="true">Password</string>
    <string name="passwordNOTmatch" translatable="true">Your password not match</string>
    <string name="payment_method" translatable="true">Payment method</string>
    <string name="payment_status" translatable="true">Payment status:</string>
    <string name="phone" translatable="true">Phone</string>
    <string name="photoSavedFaild" translatable="true">Photo failed saved</string>
    <string name="please_accept_permissions" translatable="true">Please accept for required permission</string>
    <string name="postAddSuccessfully" translatable="true">Your post added successfully</string>
    <string name="postError" translatable="true">Your post failed</string>
    <string name="press_here" translatable="true">Press Here</string>
    <string name="profile" translatable="true">Profile</string>
    <string name="re_password" translatable="true">Confirm Password</string>
    <string name="registerCompleate" translatable="true">Register Complete</string>
    <string name="register_new_driver" translatable="true">Register new driver</string>
    <string name="resetPassword" translatable="true">Reset Password</string>
    <string name="saet_numbers" translatable="true">Saet numbers</string>
    <string name="save" translatable="true">Save</string>
    <string name="seatAvailability" translatable="true">Check seats availabel for the paricular bus for each day</string>
    <string name="seat_availability" translatable="true">Seat Availability</string>
    <string name="seat_label" translatable="true">Seat label</string>
    <string name="seat_numbers" translatable="true">Seat numbers</string>
    <string name="seats" translatable="true">Seats</string>
    <string name="send" translatable="true">Send</string>
    <string name="sendEmailForReset" translatable="true">We have sent you instructions to reset your password!</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="signUpFree" translatable="true">Sign Up For Free</string>
    <string name="signin" translatable="true">Sign In</string>
    <string name="signup" translatable="true">Sign Up</string>
    <string name="station_no" translatable="true">Station No.</string>
    <string name="street_news" translatable="true">Street News</string>
    <string name="street_news_info" translatable="true">Show the posts about street news, and add post with image and some descriptions about roads</string>
    <string name="tracking_bus" translatable="true">Tracking Bus</string>
    <string name="tracking_bus_info" translatable="true">Tracking the bus during the trip in the map using GPS</string>
    <string name="version_number" translatable="true">Version 1.0.0</string>
    <string name="qadomy_abushomer_technologies" translatable="false"><![CDATA[© Qadomy&Abushomer Technologies]]></string>
</resources>