<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings" />

    <item
        android:id="@+id/help_menu"
        android:title="@string/help" />

    <item
        android:id="@+id/logout_menu"
        android:title="@string/logout" />

    <item
        android:id="@+id/connect_menu"
        android:title="@string/connectDevaloper" />

    <item
        android:id="@+id/about_menu"
        android:title="@string/about" />

    <item
        android:id="@+id/exit_menu"
        android:title="@string/exit" />
    <item android:id="@+id/book"
        android:title="Book seat">
    </item>
    <item android:id="@+id/schedule"
        android:title="Bus Schedule">
    </item>

</menu>