<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty_dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infobussystem"
            android:textSize="@dimen/twintySP" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/seat_availability"
            android:textSize="@dimen/twintySP"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/seatAvailability"
            android:textSize="@dimen/twintySP" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/street_news"
            android:textSize="@dimen/twintySP"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/street_news_info"
            android:textSize="@dimen/twintySP" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/booking_ticket"
            android:textSize="@dimen/twintySP"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/booking_ticket_info"
            android:textSize="@dimen/twintySP" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/tracking_bus"
            android:textSize="@dimen/twintySP"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/tracking_bus_info"
            android:textSize="@dimen/twintySP" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/offers"
            android:textSize="@dimen/twintySP"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/offers_info"
            android:textSize="@dimen/twintySP" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/devalopers"
            android:textSize="@dimen/twintySP"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/devaopers_info"
            android:textSize="@dimen/twintySP" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forty_dp"
            android:gravity="center"
            android:text="@string/version_number"
            android:textSize="@dimen/twintySP" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/qadomy_abushomer_technologies"
            android:textSize="@dimen/fifteen_SP" />

    </LinearLayout>

</ScrollView>