<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".Register.ProfileEdit_user">

    <ProgressBar
        android:id="@+id/imageProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/photoPickerButton"
        app:layout_constraintRight_toRightOf="@+id/photoPickerButton"
        app:layout_constraintTop_toTopOf="@+id/photoPickerButton" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/photoPickerButton"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/userphoto"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProgressBar" />

    <LinearLayout
        android:id="@+id/editDataLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoPickerButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/name"
                android:textColor="#a2a1b8"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/enter_your_new_name"
                android:padding="16dp"
                android:textColor="#a2a1b8"
                android:textColorHint="#a2a1b8"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/email"
                android:textColor="#a2a1b8"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/enter_your_new_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="#a2a1b8"
                android:textColorHint="#a2a1b8"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/Password"
                android:textColor="#a2a1b8"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/pass_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/enter_your_new_password"
                android:padding="16dp"
                android:textColor="#a2a1b8"
                android:textColorHint="#a2a1b8"
                android:textSize="16sp"
                android:inputType="textPassword"/>

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="16dp"-->
                <!--android:text="@string/rfid"-->
                <!--android:textColor="#a2a1b8"-->
                <!--android:textSize="16sp" />-->


            <!--<EditText-->
                <!--android:id="@+id/rfid_editProfile"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="right"-->
                <!--android:hint="@string/enter_your_new_rfid_number"-->
                <!--android:padding="16dp"-->
                <!--android:textColor="#a2a1b8"-->
                <!--android:textColorHint="#a2a1b8"-->
                <!--android:textSize="16sp" />-->

        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/mobile"
                android:textColor="#a2a1b8"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mobile_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/enter_you_new_mobile_number"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="#a2a1b8"
                android:textColorHint="#a2a1b8"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/city"
                android:textColor="#a2a1b8"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/city_editProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/enter_your_city"
                android:padding="16dp"
                android:textColor="#a2a1b8"
                android:textColorHint="#a2a1b8"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDataLinearLayout">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/angle"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBarEditProfile"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/angle"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
